Add a new ref-seeker-extractor-client
- A new client written in Go has been added. The new client can now
  calculate various scores such as Recall and F1.
- The Docker images are now placed in the Github package registry.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,8 @@
 
 services:
   ref-seeker-extractor:
-    image: registry.gitlab.com/dbishagen/ref-seeker-extractor/ref-seeker-extractor:1.0.0
+    #image: registry.gitlab.com/dbishagen/ref-seeker-extractor/ref-seeker-extractor:1.0.0
+    image: ghcr.io/dbishagen/ref-seeker-extractor:1.0.0
     #build: 
     #  context: ./src/
     #  dockerfile: Dockerfile
